# PrintHub-ZPL-ll

./: .dockerignore  .gitignore  Dockerfile  README.md  categories.yml  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: printers.yml
examples/: compile_example.py  lint_labelary.py  qr_left_text_right.template.json
schemas/: zplgrid_template_v1.schema.json
src/: api.py  config.py  examples.py  label.py  main.py  printing.py
src/elements/: data_matrix_element.py  elements.py  image_element.py  line_element.py  qr_code_element.py  text_element.py
src/grids/: __init__.py  grid_cell.py  grid_element.py  grid_label.py
src/presets/: base.py  cable_type_label.py  cable_usage_label.py  container_label.py  device_label.py  food_label.py  id_label.py  image.py  image_label.py  lan_cable_label.py  micro_controller_label.py  network_device_label.py  pcb_label.py  power_supply_label.py  qr.py  qr_label.py  storage_device_label.py  text.py  text_header_label.py  text_label.py
src/utils/: conversion.py  id_factory.py  label_helpers.py  labelary_client.py  zpl_element_measurer.py
templates/simple-demo-template/: metadata.json  sample_data.json  template.json
tests/: conftest.py  test_code2d_fit.py  test_code2d_image_mode.py  test_image_element.py  test_labelary_lint.py  test_labelary_render.py  test_qr_alignment_labelary.py  test_sizes_against_labelary.py  test_smoke.py  test_text_metrics_against_labelary.py  test_text_wrap_fit.py
zplgrid/: __init__.py  api.py  compiler.py  exceptions.py  labelary.py  layout.py  macros.py  measure.py  model.py  parser.py  print_drafts_store.py  printer_io.py  printers_config.py  render.py  templates_store.py  units.py  validation.py  zpl.py  zpl_2d.py  zpl_text_metrics.py
zplgrid/schemas/: printers_v1.schema.json
