[tool.poetry]
name = "print-hub-zpl-ii"
version = "0.1.0"
description = "A ZPL label generation library with presets and a FastAPI‑based REST interface"
authors = ["Natsu <natsu@yourdomain.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
# Core functionality
pyyaml = "^6.0"
pillow = "^9.0.0"
requests = "^2.28.0"
# REST API
fastapi = "^0.100.0"
uvicorn = { extras = ["standard"], version = "^0.23.0" }
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
