[tool.poetry]
name = "zplgrid"
version = "0.1.0"
description = "Compile layout templates into ZPL II."
readme = "README.md"
authors = ["Nathaniel"]
packages = [{ include = "zplgrid" }]

[tool.poetry.dependencies]
python = ">=3.10"
jsonschema = ">=4"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pillow = "^10.4.0"
requests = "^2.32.0"
segno = "^1.6.1"
pylibdmtx = "^0.1.10"
setuptools = "^80.9.0"
pyyaml = "^6.0.2"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
norecursedirs = [
  ".pytest_cache",
  "pytest-cache-files-*",
]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
